2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Andrew Overholt  <overholt@redhat.com>

        * gnu/java/nio/channels/FileChannelImpl.java: Return null if lock
        could not be acquired.
        * java/nio/channels/FileLock.java (toString): Re-implement to be
        in line with other implementations.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
        (init_glib_threads): Check if threading system is already
        initialized.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/GapContent.java:
        Removed debugging output stuff, which I accidentally left in.

	2005-05-03  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/GapContent.java:
        Implemented a real GapContent. Only the public methods have
        been implemented so far and still no UndoableEdit support.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-02  David Gilbert  <david.gilbert@object-refinery.com>

        * java/text/DecimalFormat.java
        (hashCode): Reimplemented and added API docs.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-25  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalBorders.java:
        Added inner class ScrollPaneBorder.
        * javax/swing/plaf/metal/MetalLookAndFeel.java
        (initComponentDefaults): Added default for "ScrollPane.border"
        to use the new ScrollPaneBorder.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-01  Mark Wielaard  <mark@klomp.org>

        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c:
        (window_delete_cb): Don't use C++ style comments.
